# PerfBuddy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  KEYS  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
gui/: CMakeLists.txt
gui/packaging/: perfbuddy-gui.desktop
gui/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
modules/pb_app/: CMakeLists.txt
modules/pb_app/include/pb_app/: app.hpp
modules/pb_app/src/: app.cpp
modules/pb_binary/: CMakeLists.txt
modules/pb_binary/include/pb_binary/: analyzer.hpp
modules/pb_binary/src/: analyzer.cpp  main.cpp
modules/pb_cli/: CMakeLists.txt
modules/pb_cli/src/: main.cpp
modules/pb_code/: CMakeLists.txt
modules/pb_code/include/pb_code/: analyzer.hpp
modules/pb_code/src/: analyzer.cpp  main.cpp
modules/pb_core/: CMakeLists.txt
modules/pb_core/include/pb_core/: analyzer.hpp  json.hpp  report.hpp  ruleset.hpp  types.hpp  util.hpp
modules/pb_core/src/: json.cpp  report.cpp  ruleset.cpp  types.cpp  util.cpp
modules/pb_memory/: CMakeLists.txt
modules/pb_memory/include/pb_memory/: analyzer.hpp
modules/pb_memory/src/: analyzer.cpp  main.cpp
modules/pb_runtime/: CMakeLists.txt
modules/pb_runtime/include/pb_runtime/: analyzer.hpp
modules/pb_runtime/src/: analyzer.cpp  main.cpp
modules/pb_unreal/: CMakeLists.txt
modules/pb_unreal/include/pb_unreal/: analyzer.hpp
modules/pb_unreal/src/: analyzer.cpp  main.cpp
samples/native-demo/: pbrules.ini
samples/native-demo/profiling/: alloc.csv  frametimes.csv  profile.folded
samples/native-demo/src/: entity.h  game.cpp
samples/unreal-demo/: MyGame.uproject  make_content.sh
samples/unreal-demo/Config/: DefaultEngine.ini
samples/unreal-demo/Source/MyGame/: EnemyActor.cpp
tests/: CMakeLists.txt  pb_app_test.cpp  pb_code_test.cpp  pb_core_test.cpp  pb_test.hpp  pb_unreal_test.cpp  test_fixture.hpp
